--- a/style.css
+++ b/style.css
@@ -7,12 +7,18 @@ body {
 }
 
 
-header, main, footer {
+header, footer {
 	clear:both;
 	margin-left:0;
 	width:960px;
 	font-family:Impact;
 	
+}
+main{
+	clear:both;
+	margin-left:0;
+	width:960px;
+	font-family:Arial;
 }
 
 header, main h1 {
